dbeaver/pro#6501 assume file if protocol not specified