@@ -24,6 +24,8 @@ import com.dbeaver.osgi.dependency.processing.xml.ContentParserXmlExtension;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -54,8 +56,18 @@ public class P2RepositoryManager {
         try {
             for (String s : repositories) {
                 String trim = s.trim();
-                URL url = new URL(trim);
-                list.add(new RemoteP2Repository(url));
+                URI uri = new URI(trim);
+                if (uri.getScheme() == null || !(uri.getScheme().equals("https") || uri.getScheme().equals("http") || uri.getScheme()
+                    .equals("file"))) {
+                    // assume local file and add file scheme
+                    uri = new URI("file:///" + trim);
+                }
+                try {
+                    URL url = uri.toURL();
+                    list.add(new RemoteP2Repository(url));
+                } catch (MalformedURLException e) {
+                    throw new UnsupportedOperationException("URL is malformed: " + trim, e);
+                }
             }
         } catch (Exception error) {
             throw new RepositoryInitialisationError("Error during repository indexing", error);
